# -VAE-for-De-Novo-Molecular-Generation

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: pipeline.html
examples/: quickstart.py
molgen/: __init__.py  char_rnn.py  checkpoint.py  chem.py  cli.py  data.py  generate.py  interpolate.py  metrics.py  molgpt.py  properties.py  sampling.py  selfies_tokenizer.py  synthetic.py  tokenizers.py  trainer.py  utils.py  vae.py
molgen/datasets/: __init__.py  sample_smiles.smi
scripts/: make_figures.py
tests/: test_char_rnn.py  test_checkpoint.py  test_chem.py  test_cli.py  test_data.py  test_generate.py  test_metrics.py  test_molgpt.py  test_package.py  test_properties.py  test_sampling.py  test_selfies_tokenizer.py  test_synthetic.py  test_tokenizer.py  test_tokenizers.py  test_trainer.py  test_utils.py  test_vae.py
